将获取路由参数独立出来，可测试service
移除组件测试文件

--- a/angular.json
+++ b/angular.json
@@ -7,10 +7,14 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "app",
+      "prefix": "yy",
       "schematics": {
         "@schematics/angular:module": {
-          "flat": true
+          "flat": true,
+          "spec": false
+        },
+        "@schematics/angular:component": {
+          "spec": false
         }
       },
       "architect": {
