--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preparecommitmsg":"./checkcommit.sh"
+    "prepush":"./checkcommit.sh"
   },
   "private": true,
   "dependencies": {
